styles/style.scss
@import "./vendors/reset.scss";
@import "./vendors/variables.scss";
@import "./blocs/newParty.scss";
@import "./config/medias.scss";
@import "./vendors/spinner.scss";
@import "./vendors/spinner.scss";
@import "./blocs/boxParties.scss";
@import "./blocs/modal.scss";

@import url("https://fonts.googleapis.com/css?family=Baloo+Da+2&display=swap");

body {
	margin: 10px;
	font-family: "Baloo Da 2", cursive;
}

.newParty__fields__title {
	margin: 10px;
	font-size: 30px;
	text-align: center;
	a {
		color: black;
		text-decoration: none;
	}
}

.item__box {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin: 10px;
	padding: 5px;
	box-shadow: $shadow;
}

.clipboard {
	display: flex;
}

.return {
	position: absolute;
	top: 10px;
}

.button {
	display: flex;
	justify-content: center;
	align-items: center;
}

.fade .item__box {
	transition: all 0.4s ease-out;
	opacity: 0;
	height: 2em;
}
.fade .item__box.show {
	opacity: 1;
}
.clipboard {
	margin: 10px;
	display: flex;
	justify-content: space-around;
}

.btn {
	margin: 20px auto;
	border: none;
	padding: 10px 44px;
	font-size: 26px;
	position: relative;
	&::before {
		transition: all 0.85s cubic-bezier(0.68, -0.55, 0.265, 1.55);
		content: "";
		width: 50%;
		height: 100%;
		background: black;
		position: absolute;
		top: 0;
		left: 0;
	}

	& .btn-text {
		color: white;
		// check out mdn docs for different types of blend modes.
		mix-blend-mode: difference;
	}
	&:hover {
		&::before {
			background: black;
			width: 100%;
		}
	}
	//rounded btn styles
	&.rounded {
		border-radius: 50px;
		& .text-green {
			color: #00f0b5;
			mix-blend-mode: difference;
		}

		&::before {
			border-radius: 50px;
			width: 25%;
			background: #00f0b5;
		}
		&:hover {
			&::before {
				background: #00f0b5;
				width: 100%;
			}
		}
	}
}

